--- a/package.json
+++ b/package.json
@@ -5,16 +5,44 @@
   "main": "index.js",
   "scripts": {
     "build": "sass src/scss:dist/css",
-    "start": "sass --watch src/scss:dist/css & live-server"
+    "test": "npm run test-unit && npm run test-e2e",
+    "test-unit": "jest",
+    "test-e2e": "cypress open",
+    "format": "prettier -w src/*/.js",
+    "lint": "eslint src/*/.js",
+    "start": "sass --watch src/scss:dist/css & live-server",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "Noroff",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.25.8",
+    "@babel/preset-env": "^7.25.8",
+    "@eslint/js": "^9.13.0",
+    "cypress": "^13.15.0",
+    "eslint": "^9.13.0",
+    "eslint-plugin-cypress": "^4.0.0",
+    "globals": "^15.11.0",
+    "husky": "^9.1.6",
+    "jest": "^29.7.0",
     "live-server": "^1.2.2",
-    "sass": "^1.54.8"
+    "prettier": "^3.3.3",
+    "sass": "^1.80.3"
   },
   "dependencies": {
     "bootstrap-dark-5": "^1.1.3"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.html": [
+      "prettier --write"
+    ],
+    "*.scss": [
+      "prettier --write"
+    ]
   }
 }
